--- a/diapos/SFA_Componentes.tex
+++ b/diapos/SFA_Componentes.tex
@@ -1,4 +1,4 @@
-% Created 2018-04-09 lun 18:26
+% Created 2018-12-13 ju. 20:09
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -28,6 +28,7 @@
 \newunit{\wattpeak}{Wp}
 \newunit{\watthour}{Wh}
 \newunit{\amperehour}{Ah}
+\usepackage{steinmetz}
 \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 \beamertemplatenavigationsymbolsempty
@@ -36,59 +37,59 @@
 \usetheme[hideothersubsections]{Goettingen}
 \usecolortheme{rose}
 \usefonttheme{serif}
-\author{Oscar Perpiñán Lamigueiro \\ \url{http://oscarperpinan.github.io}}
-\date{}
+\author{Oscar Perpiñán Lamigueiro}
+\date{\url{http://oscarperpinan.github.io}}
 \title{Sistemas Fotovoltaicos Autónomos}
 \subtitle{Conceptos Generales y Componentes}
 \hypersetup{
- pdfauthor={Oscar Perpiñán Lamigueiro \\ \url{http://oscarperpinan.github.io}},
+ pdfauthor={Oscar Perpiñán Lamigueiro},
  pdftitle={Sistemas Fotovoltaicos Autónomos},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 25.2.2 (Org mode 9.1.9)}, 
+ pdfcreator={Emacs 26.1 (Org mode 9.1.14)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
 \section{Conceptos Generales}
-\label{sec:org8652583}
+\label{sec:orgbf4fa2b}
 
-\begin{frame}[label={sec:orgb9ba6fa}]{Definición de un Sistema Autónomo}
+\begin{frame}[label={sec:org7e8b8a6}]{Definición de un Sistema Autónomo}
 Un sistema fotovoltaico autónomo (SFA) produce energía eléctrica para \alert{satisfacer el consumo de cargas eléctricas no conectadas a la red}, \alert{empleando un sistema de acumulación energético} para hacer frente a los períodos en los que la generación es inferior al consumo.
 \end{frame}
 
-\begin{frame}[label={sec:org5f8920e}]{Configuracion SHS}
+\begin{frame}[label={sec:org1fa1815}]{Configuracion SHS}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DiagramaUnifilarER_DC.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org912e4b6}]{Configuración AC}
+\begin{frame}[label={sec:org42f238f}]{Configuración AC}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DiagramaUnifilarER_AC.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org7c8024a}]{Configuración DC+AC}
+\begin{frame}[label={sec:orgc15b763}]{Configuración DC+AC}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DiagramaUnifilarER_AC_DC.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org531aa80}]{Sistema Híbrido}
+\begin{frame}[label={sec:org828f656}]{Sistema Híbrido}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DiagramaUnifilarER_Hibrido.pdf}
 \end{center}
 \end{frame}
 
 \section{Acumulador Electroquímico}
-\label{sec:org4ba222b}
+\label{sec:orgd7e6b7c}
 
 \subsection{Definiciones}
-\label{sec:org2d20b3f}
+\label{sec:org20e446e}
 
-\begin{frame}[label={sec:org959302f}]{Acumulador electroquímico}
+\begin{frame}[label={sec:org4e1dc34}]{Acumulador electroquímico}
 Un acumulador electroquímico es una bateria secundaria o recargable, capaz de almacenar energía eléctrica mediante una transformación en energía electroquímica. Sus principales funciones son:
 
 \begin{itemize}
@@ -100,7 +101,7 @@ Un acumulador electroquímico es una bateria secundaria o recargable, capaz de a
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgc12cc09}]{Definiciones}
+\begin{frame}[label={sec:org7ade12f}]{Definiciones}
 \begin{description}
 \item[{Capacidad nominal (\(C_{nom}\))}] es la carga eléctrica que puede ser extraída de una batería hasta llegar a la descarga total.
 
@@ -110,7 +111,7 @@ Un acumulador electroquímico es una bateria secundaria o recargable, capaz de a
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:org6dfeeb3}]{Definiciones}
+\begin{frame}[label={sec:org55d3543}]{Definiciones}
 \begin{description}
 \item[{Profundidad de descarga (PD)}] es el complemento del estado de carga.
 
@@ -118,7 +119,7 @@ Un acumulador electroquímico es una bateria secundaria o recargable, capaz de a
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:org11a21d8}]{Definiciones}
+\begin{frame}[label={sec:orgc02e3e1}]{Definiciones}
 \begin{description}
 \item[{Eficiencia farádica}] es el ratio entre la carga extraída durante la descarga y la carga requerida para restablecer el estado inicial.
 
@@ -127,9 +128,9 @@ Un acumulador electroquímico es una bateria secundaria o recargable, capaz de a
 \end{frame}
 
 \subsection{Principios de funcionamiento}
-\label{sec:org74599c2}
+\label{sec:org2d90cc9}
 
-\begin{frame}[label={sec:orgdfa7fc8}]{Composición}
+\begin{frame}[label={sec:org643f291}]{Composición}
 Una batería de ácido-plomo se compone de:
 
 \begin{itemize}
@@ -147,7 +148,7 @@ Una batería de ácido-plomo se compone de:
 
 
 
-\begin{frame}[label={sec:org581281e}]{Reacción Química REDOX}
+\begin{frame}[label={sec:org3f777ae}]{Reacción Química REDOX}
 \begin{itemize}
 \item Ánodo (+):
 \end{itemize}
@@ -178,7 +179,7 @@ PbSO_{4}+2e^{-}}
 \end{frame}
 
 
-\begin{frame}[label={sec:org0e3e30c}]{Descarga}
+\begin{frame}[label={sec:orgd633a71}]{Descarga}
 \[
 \mathrm{Pb+PbO_{2}+2H_{2}SO_{4}} \rightarrow \mathrm{2PbSO_{4}+2H_{2}O}
 \]
@@ -194,7 +195,7 @@ PbSO_{4}+2e^{-}}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge60bbdb}]{Carga}
+\begin{frame}[label={sec:orge6b558a}]{Carga}
 \[
 \mathrm{2PbSO_{4}+2H_{2}O} \rightarrow \mathrm{Pb+PbO_{2}+2H_{2}SO_{4}} 
 \]
@@ -219,8 +220,8 @@ PbSO_{4}+2e^{-}}
 \end{frame}
 
 \subsection{Modelo eléctrico}
-\label{sec:orgabf9ea5}
-\begin{frame}[label={sec:org952bef1}]{Fuente de tensión}
+\label{sec:org145a2cc}
+\begin{frame}[label={sec:org9c1c2e6}]{Fuente de tensión}
 \begin{itemize}
 \item Una batería de ácido-plomo puede ser modelada como una fuente de tensión, \(V_{BI}\), en serie con una resistencia, \(R_{BI}\).
 \end{itemize}
@@ -230,7 +231,7 @@ PbSO_{4}+2e^{-}}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgfc91251}]{Densidad del electrolito y Tensión en Abierto}
+\begin{frame}[label={sec:org9fff6e9}]{Densidad del electrolito y Tensión en Abierto}
 \begin{block}{La medida de la tensión en circuito abierto de la batería es un método común para estimar el estado de carga de una batería.}
 \begin{itemize}
 \item \(V_{BI}=\rho_{e}+0.84\)
@@ -246,13 +247,13 @@ PbSO_{4}+2e^{-}}
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgb77ef12}]{Evolución de la tensión durante un proceso de descarga}
+\begin{frame}[label={sec:orgb47be92}]{Evolución de la tensión durante un proceso de descarga}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Bateria_SOCyDescarga.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org9c98de7}]{Evolución de la tensión en un proceso de carga}
+\begin{frame}[label={sec:org5b241b1}]{Evolución de la tensión en un proceso de carga}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Bateria_CorrYTemp.pdf}
 \end{center}
@@ -260,9 +261,9 @@ PbSO_{4}+2e^{-}}
 
 
 \subsection{Efecto de la temperatura}
-\label{sec:org109fbd4}
+\label{sec:org7bbd0c3}
 
-\begin{frame}[label={sec:orgcac15d5}]{Temperatura baja}
+\begin{frame}[label={sec:org85d144d}]{Temperatura baja}
 \begin{itemize}
 \item El electrolito se hace más viscoso y decrece la movilidad de los iones (aumenta la resistencia eléctrica)
 
@@ -272,7 +273,7 @@ PbSO_{4}+2e^{-}}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd3c56bb}]{Temperatura alta}
+\begin{frame}[label={sec:org00d15cf}]{Temperatura alta}
 \begin{itemize}
 \item \alert{Acelera las reacciones, favoreciendo la corrosión}. Por tanto, decrece la vida de la batería.
 
@@ -286,15 +287,15 @@ PbSO_{4}+2e^{-}}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2d49939}]{Capacidad según el regimen de descarga y la temperatura}
+\begin{frame}[label={sec:org516b52f}]{Capacidad según el regimen de descarga y la temperatura}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Bateria_Capacidad.pdf}
 \end{center}
 \end{frame}
 
 \subsection{Ciclado}
-\label{sec:orge6500a6}
-\begin{frame}[label={sec:orgb3b9b0a}]{Definición}
+\label{sec:orgada9823}
+\begin{frame}[label={sec:orgd8e1f34}]{Definición}
 \begin{itemize}
 \item El ciclado es el \alert{proceso} por el que un acumulador es \alert{continuamente cargado y descargado durante su vida.}
 
@@ -302,7 +303,7 @@ PbSO_{4}+2e^{-}}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org8cfeca5}]{Resistencia al ciclado}
+\begin{frame}[label={sec:orgb5a6ec7}]{Resistencia al ciclado}
 Los factores que influyen sobre la resistencia del acumulador al ciclado son: 
 \begin{itemize}
 \item \alert{La profundidad de descarga}: las descargas profundas disminuyen los ciclos de vida de una batería.
@@ -313,17 +314,96 @@ Los factores que influyen sobre la resistencia del acumulador al ciclado son:
 \end{itemize}
 \end{frame}
 
+\subsection{Tipos de acumuladores}
+\label{sec:orgae6cf36}
+
+\begin{frame}[label={sec:org5425fbf}]{Características generales}
+\begin{itemize}
+\item Un acumulador incorporado a un SFA debe ser \alert{capaz de funcionar sometido a ciclados diarios y anuales de carga y descarga}, teniendo en cuenta que la carga entregada por el generador depende directamente de la radiación (variable en los períodos intradiario e intraanual).
+
+\item Debido a las posibles fluctuaciones en la carga aportada, es probable que se sucedan \alert{periodos prolongados en carga parcial}.
+
+\item Es habitual que las \alert{descargas sean a baja intensidad con periodos de descarga largos}, típicamente en torno a las 100 horas.
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label={sec:orgdb71757}]{Baterías de arranque}
+\begin{itemize}
+\item Habitualmente empleadas en \alert{automóviles}
+
+\item Fácilmente localizables en cualquier \alert{mercado local a bajo precio} (relativo)
+
+\item \alert{Opción frecuentemente empleada} en sistemas de electrificación rural de \alert{pequeño tamaño} o como \alert{reemplazo} de baterías estropeadas
+
+\item Buen comportamiento en descarga de alta intensidad y a bajas temperaturas
+
+\item \alert{No son resistentes frente al ciclado}
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label={sec:org956ba3f}]{Baterías de tracción}
+\begin{itemize}
+\item Empleadas, por ejemplo, en \alert{carretillas elevadoras}.
+
+\item Soportan \alert{elevado número de ciclos profundos de carga-descarga}.
+
+\item Requieren \alert{aportación de agua} y \alert{mantenimiento frecuente}.
+
+\item Empleo en SFA sólo cuando exista mantenimiento regular.
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label={sec:orgda568d8}]{Baterías estacionarias}
+\begin{itemize}
+\item Empleadas en sistemas de alimentación ininterrumpida (\alert{UPS}) o instalaciones remotas (por ejemplo, radioenlaces).
+
+\item Funcionan en \alert{régimen de flotación}.
+
+\item Gran reserva de electrolito aunque realizan poco uso de agua.
+
+\item \alert{Resistencia a la corrosión} y elevada fiabilidad.
+
+\item \alert{Opción muy interesante para SFA}. Precio más elevado frente a las anteriores opciones.
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label={sec:orgdb53029}]{Elección de batería}
+\begin{block}{Criterios a tener en cuenta}
+\begin{itemize}
+\item \alert{Requisitos técnicos} (capacidad, tipo de ciclado, etc.)
+
+\item \alert{Coste del sistema}
+
+\item Recursos de \alert{mantenimiento}.
+
+\item \alert{Disponibilidad de reemplazo} en el mercado local
+
+\item Capacidad de intervención del usuario.
+\end{itemize}
+\end{block}
+
+\begin{block}{Para aplicaciones fotovoltaicas se recomienda}
+\begin{itemize}
+\item \alert{Baterías estacionarias aireadas de placa positiva tubular}
+
+\item \alert{Baterías SLI modificadas}: placas más gruesas, mayor cantidad de
+electrolito por encima de las placas, con aleación de Pb-Sb en la
+rejilla y vaso transparente.
+\end{itemize}
+\end{block}
+\end{frame}
+
 
 \subsection{Composición}
-\label{sec:org896fc2c}
+\label{sec:orge1ac440}
 
-\begin{frame}[label={sec:org1ec3305}]{Composición}
+\begin{frame}[label={sec:org28c99c7}]{Composición}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AcumuladorBN.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org2e5b8d8}]{Rejillas}
+\begin{frame}[label={sec:org9e98dd7}]{Rejillas}
 \begin{itemize}
 \item Dan \alert{soporte estructural a los materiales activos}
 
@@ -343,7 +423,7 @@ ciclado y en descarga profunda.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org34d8cf9}]{Materiales activos}
+\begin{frame}[label={sec:org77bee10}]{Materiales activos}
 \begin{itemize}
 \item Los materiales activos participan en las reacciones químicas.
 \item Están \alert{adheridos a las rejillas}.
@@ -351,7 +431,7 @@ ciclado y en descarga profunda.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org573ca5a}]{Electrolito}
+\begin{frame}[label={sec:org9a366f7}]{Electrolito}
 \begin{itemize}
 \item El \alert{electrolito} participa en la reacción y \alert{realiza el transporte
 iónico} para cerrar el ciclo de corriente de las reacciones.
@@ -370,7 +450,7 @@ los de arranque (altos regímenes de descarga).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga7e4a4a}]{Separadores}
+\begin{frame}[label={sec:org75766e8}]{Separadores}
 \begin{itemize}
 \item Los separadores \alert{aislan las placas de diferente polaridad pero
 permiten el movimiento iónico a través suyo}.
@@ -385,97 +465,14 @@ permiten el movimiento iónico a través suyo}.
 \end{itemize}
 \end{frame}
 
-\subsection{Tipos de acumuladores}
-\label{sec:orge366012}
-
-\begin{frame}[label={sec:org20da003}]{Características generales}
-\begin{itemize}
-\item Un acumulador incorporado a un SFA debe ser \alert{capaz de funcionar sometido a ciclados diarios y anuales de carga y descarga}, teniendo en cuenta que la carga entregada por el generador depende directamente de la radiación (variable en los períodos intradiario e intraanual).
-
-\item Debido a las posibles fluctuaciones en la carga aportada, es probable que se sucedan \alert{periodos prolongados en carga parcial}.
-
-\item Es habitual que las \alert{descargas sean a baja intensidad con periodos de descarga largos}, típicamente en torno a las 100 horas.
-\end{itemize}
-\end{frame}
-
-\begin{frame}[label={sec:org8c73e3a}]{Baterías de arranque}
-\begin{itemize}
-\item Habitualmente empleadas en automóviles
-
-\item Fácilmente localizables en cualquier mercado local a bajo precio (relativo)
-
-\item Opción frecuentemente empleada en sistemas de electrificación rural de pequeño tamaño
-
-\item Reemplazo de baterías estropeadas
-
-\item Buen comportamiento en descarga de alta intensidad y tienen buen rendimiento de descarga a bajas temperaturas.
-
-\item No son resistentes frente al ciclado
-\end{itemize}
-\end{frame}
-
-\begin{frame}[label={sec:org360d8d7}]{Baterías de tracción}
-\begin{itemize}
-\item Empleadas, por ejemplo, en carretillas elevadoras.
-
-\item Resistencia suficiente para soportar un elevado número de ciclos profundos de carga-descarga.
-
-\item Requieren aportación de agua y mantenimiento frecuente.
-
-\item Empleo en SFA sólo cuando exista mantenimiento regular.
-\end{itemize}
-\end{frame}
-
-\begin{frame}[label={sec:orga06cd6e}]{Baterías estacionarias}
-\begin{itemize}
-\item Empleadas en sistemas de alimentación ininterrumpida (UPS) o instalaciones remotas (por ejemplo, radioenlaces).
-
-\item Funcionan en régimen de flotación.
-
-\item Gran reserva de electrolito aunque realizan poco uso de agua.
-
-\item Resistencia a la corrosión y elevada fiabilidad.
-
-\item Opción muy interesante para SFA. Precio más elevado frente a las anteriores opciones.
-\end{itemize}
-\end{frame}
-
-\begin{frame}[label={sec:orgbe353c4}]{Elección de batería}
-\begin{itemize}
-\item Criterios a tener en cuenta:
-
-\begin{itemize}
-\item \alert{Requisitos técnicos} (capacidad, tipo de ciclado, etc.)
-
-\item \alert{Coste del sistema}
-
-\item Recursos de \alert{mantenimiento} disponibles durante la vida del sistema,
-
-\item \alert{Disponibilidad de reemplazo} en el mercado local
-
-\item Capacidad de intervención del usuario.
-\end{itemize}
-
-\item \alert{Para aplicaciones fotovoltaicas} se recomienda:
-
-\begin{itemize}
-\item \alert{Baterías estacionarias aireadas de placa positiva tubular}
-
-\item \alert{Baterías SLI modificadas}: placas más gruesas, mayor cantidad de
-electrolito por encima de las placas, con aleación de Pb-Sb en la
-rejilla y vaso transparente.
-\end{itemize}
-\end{itemize}
-\end{frame}
-
 \section{Regulador de carga}
-\label{sec:org707f434}
+\label{sec:orge2b2d73}
 
-\begin{frame}[label={sec:orga054f04}]{Definición}
+\begin{frame}[label={sec:org68e0a3a}]{Definición}
 Un regulador de carga es un equipo electrónico capaz de \alert{evitar la sobrecarga y la descarga excesiva de un acumulador} desconectando al acumulador del generador o del consumo \alert{cuando se alcanzan determinados estados umbral, generalmente determinados por la tensión en bornes}.
 \end{frame}
 
-\begin{frame}[label={sec:org0a9bdcb}]{Regulador Serie y paralelo}
+\begin{frame}[label={sec:org5dca50d}]{Regulador Serie y paralelo}
 \begin{itemize}
 \item Regulador Serie
 \end{itemize}
@@ -492,7 +489,7 @@ Un regulador de carga es un equipo electrónico capaz de \alert{evitar la sobrec
 \end{frame}
 
 
-\begin{frame}[label={sec:org7736314}]{Ciclo de carga}
+\begin{frame}[label={sec:org916a44d}]{Ciclo de carga}
 \begin{center}
 \includegraphics[height=0.5\textheight]{../figs/HisteresisCargaRegulador.pdf}
 \end{center}
@@ -506,7 +503,7 @@ Un regulador de carga es un equipo electrónico capaz de \alert{evitar la sobrec
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge6b5944}]{Ciclo de descarga}
+\begin{frame}[label={sec:org3e17bcc}]{Ciclo de descarga}
 \begin{center}
 \includegraphics[height=0.5\textheight]{../figs/HisteresisDescargaRegulador.pdf}
 \end{center}
@@ -515,9 +512,9 @@ Los umbrales deben adaptarse a cada tipo de batería (mediante ensayos, o recome
 \end{frame}
 
 \section{Luminarias}
-\label{sec:orgadca7d5}
+\label{sec:orged37784}
 
-\begin{frame}[label={sec:org738dbc7}]{Funcionamiento}
+\begin{frame}[label={sec:orga6f87db}]{Funcionamiento}
 \begin{itemize}
 \item Una lámpara fluorescente convencional está formada por un \alert{tubo de descarga con gas a baja presión}, un \alert{recubrimiento de una mezcla de polvos fluorescentes} y \alert{dos electrodos} en los extremos.
 
@@ -531,14 +528,14 @@ Los umbrales deben adaptarse a cada tipo de batería (mediante ensayos, o recome
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org43bc846}]{Degradación}
+\begin{frame}[label={sec:orgc7bdb4d}]{Degradación}
 \begin{itemize}
 \item \alert{El proceso de encendido es el que más contribuye a la degradación} de los tubos fluorescentes.
 \item Un método alternativo consiste en \alert{precalentar los electrodos} (con un circuito basado en un condensador y en una resistencia) facilitando el paso a la etapa de emisión termoiónica, y acortando el período de encencedido.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb692a4e}]{Fotometría}
+\begin{frame}[label={sec:orgdb882ba}]{Fotometría}
 \begin{description}
 \item[{Flujo}] radiante es la potencia emitida por la fuente luminosa (Unidad: Watio)
 
@@ -550,7 +547,7 @@ Los umbrales deben adaptarse a cada tipo de batería (mediante ensayos, o recome
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:org8be2a40}]{Requisitos}
+\begin{frame}[label={sec:org0788002}]{Requisitos}
 \begin{itemize}
 \item Recomendable eficiencia superior a 50 \(\si{\lumen\per\watt}\)
 
