--- a/diapos/SFB_Componentes.org
+++ b/diapos/SFB_Componentes.org
@@ -23,9 +23,11 @@
 
 *** Definición
 
--  Un *motor eléctrico* es una máquina eléctrica que *transforma energía eléctrica en energía mecánica* por medio de interacciones electromagnéticas.
+**** Motor eléctrico
+Máquina eléctrica que *transforma energía eléctrica en energía mecánica* por medio de interacciones electromagnéticas.
 
--  Una *bomba* es una *máquina hidráulica* generadora que *transforma la energía mecánica* con la que es accionada *en energía hidráulica del fluido* (agua). 
+**** Bomba 
+*Máquina hidráulica* generadora que *transforma la energía mecánica* con la que es accionada *en energía hidráulica del fluido* (agua).
 
 ** Motores eléctricos en ESF
 
@@ -66,22 +68,24 @@ $$\frac{\Delta p}{\rho}+\frac{\Delta v^2}{2}+g\cdot\Delta h=cte.$$
 
 
 *** Bombas de desplazamiento positivo
+#+BEGIN_EXPORT latex
+\[
+\frac{\Delta p}{\rho}+\frac{\Delta v^2}{2}+g\cdot\Delta h=cte.
+\]
+#+END_EXPORT
 
 **** *Principio*: cambio de presión
-
-- El aumento de presión se realiza por el empuje de las paredes de las cámaras que varían su volumen.
-
-- *Bombas oscilantes*, compartimentos fijos de volumen variable por el movimiento de un pistón o por la deformación de un diafragma.
-
-- *Bombas rotatorias*, compartimentos que se desplazan desde la zona de entrada (de baja presión) hasta la zona de salida (de alta presión) de la máquina. (p.ej. bomba de tornillo o helicoidal).
+El aumento de presión se realiza por el empuje de las paredes de las cámaras que varían su volumen.
 
 *** Bombas de membrana
-
+*Bombas oscilantes*, compartimentos fijos de volumen variable por el movimiento de un pistón o por la deformación de un diafragma.
+#+ATTR_LATEX: :height 0.3\textheight
 [[../figs/800px-Bomba_diafragma_impulsando.pdf]]
-
+#+ATTR_LATEX: :height 0.3\textheight
 [[../figs/Bomba_diafragma_aspirando.pdf]]
 
 *** Bombas helicoidales
+*Bombas rotatorias*, compartimentos que se desplazan desde la zona de entrada (de baja presión) hasta la zona de salida (de alta presión) de la máquina. (p.ej. bomba de tornillo o helicoidal).
 
 [[../figs/bombatornillo.pdf]]
 
@@ -94,21 +98,24 @@ $$\frac{\Delta p}{\rho}+\frac{\Delta v^2}{2}+g\cdot\Delta h=cte.$$
 - Las bombas de diafragma, más económicas, requieren el *reemplazo de los diafragmas* cada dos o tres años, dependiendo del fabricante.
 
 *** Bombas rotodinámicas
+#+BEGIN_EXPORT latex
+\[
+\frac{\Delta p}{\rho}+\frac{\Delta v^2}{2}+g\cdot\Delta h=cte.
+\]
+#+END_EXPORT
 
 **** *Principio*: añadir cantidad de movimiento
 
-- En este tipo de bombas hay uno o varios rodetes con álabes que giran generando un campo de presiones en el fluido.
+En este tipo de bombas hay uno o varios rodetes con álabes que giran generando un campo de presiones en el fluido.
 
-- *Radiales o centrífugas*
-
+*** Bombas centrífugas
   - El fluido entra por el centro del rodete cuyos álabes conducen el fluido
 
   - Por la fuerza centrífuga es impulsado hacia el exterior y es recogido por la carcasa
 
   - Es conducido hacia la salida o hacia el siguiente rodete (bombas multietapa)
 
-*** Bombas centrífugas
-
+#+ATTR_LATEX: :height 0.5\textheight
 [[../figs/BombaCentrifuga.pdf]]
 
 *** Bombas centrífugas
@@ -161,28 +168,33 @@ $$\frac{\Delta p}{\rho}+\frac{\Delta v^2}{2}+g\cdot\Delta h=cte.$$
 - *Potencia superior a 1 kWp*
 
   - Bomba sumergible centrífuga multietapa con motor asíncrono
-*** 
-
-[[../figs/Marruecos4.png]]
-
 * Acoplamiento generador-motobomba
-
-*** 
-#+ATTR_LATEX: :height 0.9\textheight
-[[../figs/VariadorFrecuencia.jpg]]
 
 
 *** Motivo
+    :PROPERTIES:
+    :BEAMER_opt: plain
+    :END:
 
--  La *potencia y tensión suministrada por un generador FV varían* con la radiación y la temperatura.
+****                                                                  :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.8
+     :END:
+ -  La *potencia y tensión suministrada por un generador FV varían* con la radiación y la temperatura.
 
--  Las condiciones de funcionamiento *no se adaptan siempre a todos los requerimientos de la motobomba*.
+ -  Las condiciones de funcionamiento *no se adaptan siempre a todos los requerimientos de la motobomba*.
 
--  Es necesario adaptar las condiciones de funcionamiento de la motobomba al punto de trabajo del generador FV.
+ -  Es necesario adaptar las condiciones de funcionamiento de la motobomba al punto de trabajo del generador FV.
 
-   -  *Motor AC: variador de frecuencia*
+    -  *Motor AC: variador de frecuencia*
 
-   -  *Motor DC: convertidor DC-DC*
+    -  *Motor DC: convertidor DC-DC*
+
+****                                                                  :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.4
+     :END:
+[[../figs/VariadorFrecuencia.jpg]]
 
 ** Convertidores
 *** Convertidor DC-DC
@@ -195,7 +207,6 @@ $$\frac{\Delta p}{\rho}+\frac{\Delta v^2}{2}+g\cdot\Delta h=cte.$$
 
 - Normalmente no incorporan buscador de MPP.
    
-*** Variador de frecuencia
 *** Variador de frecuencia
 - El variador de frecuencia *transforma una señal alterna de una frecuencia en otra señal alterna de otra frecuencia*.
 
@@ -212,43 +223,58 @@ $$\frac{\Delta p}{\rho}+\frac{\Delta v^2}{2}+g\cdot\Delta h=cte.$$
 
 *** Pozo vacío
 
--  *Control de frecuencia de salida del variador*.
+**** Control de frecuencia de salida del variador
 
--  Cuando el motor trabaja en vacío, la corriente consumida baja y el variador debe subir la frecuencia para alcanzar la tensión de referencia.
+ -  Cuando el motor trabaja en vacío, la corriente consumida baja y el variador debe subir la frecuencia para alcanzar la tensión de referencia.
 
--  Si se supera la frecuencia de 55 Hz se para el sistema y se marca un intervalo de espera para permitir que el pozo vuelva a llenarse.
+ -  Si se supera la frecuencia de 55 Hz se para el sistema y se marca un intervalo de espera para permitir que el pozo vuelva a llenarse.
 
 *** Deposito lleno
 
-- *Presostáto en la tubería combinado con una boya en el depósito*.
+**** Presostáto en la tubería combinado con una boya en el depósito
 
-- Cuando en el depósito se alcanza un nivel determinado, la boya acciona el cierre de la entrada al depósito.
+ - Cuando en el depósito se alcanza un nivel determinado, la boya acciona el cierre de la entrada al depósito.
 
-- Sin embargo, la bomba sigue elevando agua. De esta forma, la presión dentro de la tubería aumenta hasta accionar el presostato.
+ - Sin embargo, la bomba sigue elevando agua. De esta forma, la presión dentro de la tubería aumenta hasta accionar el presostato.
 
-- Se pone en marcha un temporizador para permitir que baje el nivel del depósito.
+ - Se pone en marcha un temporizador para permitir que baje el nivel del depósito.
 
 
 * Circuito Hidráulico
 
 *** Circuito hidráulico
+    :PROPERTIES:
+    :BEAMER_opt: plain
+    :END:
 
-  - Tubería de impulsión
+****                                                                  :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.5
+     :END:
+   - Tubería de impulsión
 
-  - Boca de pozo
+   - Boca de pozo
 
-  - Tubería de distribución y valvulería
+   - Tubería de distribución y valvulería
 
-  - Depósito
-   
-*** 
-
-[[../figs/CircuitoHidraulico.jpg]]
+****                                                                  :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.6
+     :END:
+ [[../figs/CircuitoHidraulico.jpg]]
 
 
 *** Tubería de Impulsión
+    :PROPERTIES:
+    :BEAMER_opt: plain
+    :END:
 
-- Es la tubería instalada a la salida de la bomba.
+*Tubería instalada a la salida de la bomba.*
+
+****                                                                  :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.6
+     :END:
 
 - Polietileno de alta densidad y calidad alimentaria
 
@@ -261,18 +287,28 @@ $$\frac{\Delta p}{\rho}+\frac{\Delta v^2}{2}+g\cdot\Delta h=cte.$$
   - Coste mayor
 
   - Requiere terminales específicos fabricados en acero inoxidable
-
-*** 
+****                                                                  :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.6
+     :END:
 
 [[../figs/Marruecos4.png]]
 
 
 *** Depósito elevado
+    :PROPERTIES:
+    :BEAMER_opt: plain
+    :END:
 
-- *Tamaño adecuado para 1 o 2 días de consumo*
-- Para depósitos pequeños (20 a 1.000 l) debe elegirse un *depósito plástico de color negro*  para evitar aparición de algas y otros contaminantes.
-- El plástico puede ser polietileno de alta densidad para uso alimentario.
+****                                                                  :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.6
+     :END:
+ - *Tamaño adecuado para 1 o 2 días de consumo*
+ - Para depósitos pequeños (20 a 1.000 l) debe elegirse un *depósito plástico de color negro*  para evitar aparición de algas y otros contaminantes.
 
-*** 
-
-[[../figs/Bombeo.jpg]]
+****                                                                  :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.6
+     :END:
+ [[../figs/Bombeo.jpg]]
